<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- English -->
    <string name="app_name">World Gender Gap</string>
    <string name="action_settings">Settings</string>
    <string name="basic_info">Basic Info</string>
    <string name="education">Education</string>
    <string name="industry">Industry</string>
    <string name="social_development">Social Development</string>
    <string name="population">Population</string>
    <string name="population_composition">Population Composition</string>
    <string name="gdp">GDP</string>
    <string name="gni_per_capita">GNI Per Capita</string>
    <string name="growth">GDP growth (annual %)</string>
    <string name="change_date">Change Date</string>
    <string name="choose_a_country">Select country</string>
    <string name="compare_countries">Compare countries</string>
    <string name="hello_world">Hello world!</string>
    <string name="select_country">Select country</string>
    <string name="title_activity_compare_countries">Compare Countries</string>
    <string name="select_another_country">Select Another Country</string>
    <string name="compare">Compare!</string>
    <string name="country_name">Country Name</string>
    <string name="title_activity_search_country">SearchCountry</string>
    <string name="enter_a_country_name">Enter A Country Name</string>
    <string name="title_activity_compare_country_with">CompareCountryWith</string>
    <string name="compare_country_with">Enter The Name Of The Country To Compare With</string>
    <string name="ratio_of_school_enrollment">Ratio of female to male in:</string>
    <string name="primary_enrollment">Primary enrollment</string>
    <string name="secondary_enrollment">Secondary enrollment</string>
    <string name="tertiary_enrollment">Tertiary enrollment</string>
    <string name="literacy_rate">Literacy rate</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="unemployed">Labour force unemployed</string>
    <string name="labour_participation">Labour participation rate (% of gender population)</string>
    <string name="employers">Employers (% of employed gender population)</string>
    <string name="self_employed">Self-employed (% of employed gender population)</string>
    <string name="life_expectancy">Life expectancy at birth (years)</string>
    <string name="parliament_seats">Proportion of seats held by women in national parliaments</string>
    <string name="fertility_rate">Fertility rate, total (births per woman)</string>
    <string name="cpia_rating">CPIA gender quality rating (1 is low, 6 is high)</string>
    <string name="capital_city">Capital city</string>
    <string name="area_of_country">Area of country</string>
    <string name="title_activity_detailed_view">DetailedView</string>
    <string name="more_info">More info</string>
    <string name="title_activity_rss">RSSActivity</string>
    <string name="news_articles">News Articles</string>
    <string name="logo">Logo</string>
    <string name="acknowledgement">World Bank Group, CPIA database (http://www.worldbank.org/ida).</string>

</resources>
