<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ratio_of_school_enrollment"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/primary_enrollment"
        android:textAlignment="center"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/primaryEnrollment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/secondary_enrollment"
        android:textAlignment="center"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/secondaryEnrollment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tertiary_enrollment"
        android:textAlignment="center"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tertiaryEnrollment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="16sp"
        android:text="@string/literacy_rate" />

    <TextView
        android:id="@+id/tv6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/male"
        android:textAlignment="center"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/maleLiteracyRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textSize="14sp" />


</LinearLayout>