<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <TextView
        android:id="@+id/tv0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingTop="12dp"
        android:text="@string/capital_city"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/capitalCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv0"
        android:textAlignment="center"
        android:textSize="24sp" android:height="30dp" android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/capitalCity"
        android:paddingTop="12dp"
        android:text="@string/population"
        android:textAlignment="center"
        android:textSize="16sp"
        android:onClick="getDefinition" />

    <TextView
        android:id="@+id/population"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
        android:textAlignment="center"
        android:textSize="24sp" android:height="30dp" android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/population"
        android:paddingTop="12dp"
        android:text="@string/gdp"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/GDP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv3"
        android:textAlignment="center"
        android:textSize="24sp" android:height="30dp" android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/tv4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:text="@string/area_of_country"
        android:textAlignment="center"
        android:textSize="16sp" android:layout_below="@+id/growth"/>

    <TextView
        android:id="@+id/countryArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp" android:height="30dp" android:gravity="center_vertical"
        android:layout_below="@+id/tv4"/>

    <TextView
        android:id="@+id/tv5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:text="@string/growth"
        android:textAlignment="center"
        android:textSize="16sp" android:layout_below="@+id/GDP"/>

    <TextView
        android:id="@+id/growth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp" android:height="30dp" android:gravity="center_vertical"
        android:layout_below="@+id/tv5"/>

</RelativeLayout>