<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/flags"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" android:orientation="vertical" android:gravity="center">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:gravity="center">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="230dp"
                android:layout_height="wrap_content" android:gravity="center">
            <Button
                android:id="@+id/btn_choose_a_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/btn_compare_countries"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/btn_compare_countries"
                android:layout_marginTop="0dp"
                android:onClick="showChooseCountry"
                android:padding="20dp"
                android:text="@string/select_country"
                android:textSize="20sp" android:layout_gravity="center"/>
            <Button
                android:id="@+id/btn_compare_countries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_choose_a_country"
                android:layout_centerHorizontal="true"
                android:onClick="showCompareCountries"
                android:padding="20dp"
                android:text="@string/compare_countries"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/btn_rss_reader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_compare_countries"
                android:layout_centerHorizontal="true"
                android:onClick="showRSSReader"
                android:padding="20dp"
                android:text="@string/news_articles"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp" android:layout_marginTop="0dp" android:layout_gravity="bottom"
            android:layout_alignParentEnd="false" android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/acknowledgement"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/logo"
            android:text="@string/acknowledgement"
            android:textSize="14sp" android:gravity="center_vertical"/>
        <ImageView
            android:id="@+id/logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="3dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo"
            android:scaleType="fitXY"
            android:src="@drawable/worldbank_logo" />
    </RelativeLayout>

</RelativeLayout>