<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:text="@string/life_expectancy"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
        android:text="@string/male"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/maleLifeExpectancy1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv2"
        android:text="99"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/femaleLifeExpectancy1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv3"
        android:layout_below="@+id/tv3"
        android:text="99"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/maleLifeExpectancy1"
        android:layout_marginTop="10dp"
        android:text="@string/parliament_seats"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/proportionOfSeats1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv4"
        android:text="28"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/proportionOfSeats1"
        android:layout_marginTop="10dp"
        android:text="@string/fertility_rate"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/fertilityRate1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv5"
        android:text="3"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fertilityRate1"
        android:layout_marginTop="10dp"
        android:text="@string/cpia_rating"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/cpiaRating1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv6"
        android:text="2.1"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tv6"
        android:layout_below="@+id/tv1"
        android:layout_marginRight="17dp"
        android:text="@string/female"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/femaleLifeExpectancy2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv4"
        android:layout_toRightOf="@+id/tv3"
        android:text="99"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/maleLifeExpectancy2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv4"
        android:layout_alignRight="@+id/tv5"
        android:text="99"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/proportionOfSeats2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv5"
        android:layout_alignRight="@+id/tv5"
        android:text="29"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/fertilityRate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv6"
        android:layout_alignLeft="@+id/proportionOfSeats2"
        android:text="3"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/cpiaRating2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/year"
        android:layout_alignLeft="@+id/fertilityRate2"
        android:text="2.3"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cpiaRating1"
        android:layout_below="@+id/cpiaRating1"
        android:layout_marginTop="30dp"
        android:text="@string/change_date"
        android:textAlignment="center"
        android:textSize="12sp" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/year"
        android:layout_below="@+id/year"
        android:max="53"
        android:progress="53" />

</RelativeLayout>