<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv1"
        android:layout_below="@+id/tv1"
        android:layout_marginTop="10dp"
        android:text="@string/primary_enrollment"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/primaryEnrollment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv1"
        android:layout_below="@+id/tv2"
        android:textSize="24sp" android:height="30dp" android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv1"
        android:layout_below="@+id/primaryEnrollment"
        android:layout_marginTop="10dp"
        android:text="@string/secondary_enrollment"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/secondaryEnrollment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv1"
        android:layout_below="@+id/tv3"
        android:textSize="24sp" android:height="30dp" android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv1"
        android:layout_below="@+id/secondaryEnrollment"
        android:layout_marginTop="10dp"
        android:text="@string/tertiary_enrollment"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tertiaryEnrollment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv1"
        android:layout_below="@+id/tv4"
        android:textSize="24sp" android:height="30dp" android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv1"
        android:layout_below="@+id/tertiaryEnrollment"
        android:layout_marginTop="20dp"
        android:text="@string/literacy_rate"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv1"
        android:layout_below="@+id/tv5"
        android:text="@string/male"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv6"
        android:layout_below="@+id/tv5"
        android:layout_marginLeft="90dp"
        android:text="@string/female"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/maleLiteracyRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv1"
        android:layout_below="@+id/tv6"
        android:textSize="24sp" android:height="30dp" android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/femaleLiteracyRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv7"
        android:layout_below="@+id/tv7"
        android:textSize="24sp" android:height="30dp" android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingTop="12dp"
        android:text="@string/ratio_of_school_enrollment"
        android:textSize="16sp" />
    
     <ImageView
        android:id="@+id/iv1"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_toRightOf="@+id/tv2"
        android:layout_alignBottom="@id/tv2"
        android:layout_marginBottom="-4dp"
        android:layout_marginLeft="5dp"
        android:adjustViewBounds="true"  
        android:scaleType="fitXY"
        android:contentDescription="@string/more_info"
        android:src="@android:drawable/ic_menu_info_details"
        android:onClick="showDetails"
        android:tag="SE.ENR.PRIM.FM.ZS" />
     
      <ImageView
        android:id="@+id/iv2"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_toRightOf="@+id/tv3"
        android:layout_alignBottom="@id/tv3"
        android:layout_marginBottom="-4dp"
        android:layout_marginLeft="5dp"
        android:adjustViewBounds="true"  
        android:scaleType="fitXY"
        android:contentDescription="@string/more_info"
        android:src="@android:drawable/ic_menu_info_details"
        android:onClick="showDetails"
        android:tag="SE.ENR.SECO.FM.ZS" />
      
       <ImageView
        android:id="@+id/iv3"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_toRightOf="@+id/tv4"
        android:layout_alignBottom="@id/tv4"
        android:layout_marginBottom="-4dp"
        android:layout_marginLeft="5dp"
        android:adjustViewBounds="true"  
        android:scaleType="fitXY"
        android:contentDescription="@string/more_info"
        android:src="@android:drawable/ic_menu_info_details"
        android:onClick="showDetails"
        android:tag="SE.ENR.TERT.FM.ZS" />

        <ImageView
        android:id="@+id/iv4"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_toRightOf="@+id/tv6"
        android:layout_alignBottom="@id/tv6"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="-4dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:contentDescription="@string/more_info"
        android:src="@android:drawable/ic_menu_info_details"
        android:onClick="showDetails"
        android:tag="SE.ADT.LITR.MA.ZS" />

         <ImageView
        android:id="@+id/iv5"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_toRightOf="@+id/tv7"
        android:layout_alignBottom="@id/tv7"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="-4dp"
        android:adjustViewBounds="true"  
        android:scaleType="fitXY"
        android:contentDescription="@string/more_info"
        android:src="@android:drawable/ic_menu_info_details"
        android:onClick="showDetails"
        android:tag="SE.ADT.LITR.FE.ZS" />

</RelativeLayout>